Restored to '977384864ca9b6e0299f5b9738a9006d5c0a9244'
Replit-Restored-To: 977384864ca9b6e0299f5b9738a9006d5c0a9244

--- a/public/locales/en/admin.json
+++ b/public/locales/en/admin.json
@@ -1,7 +1,8 @@
+
 {
   "navigation": {
     "dashboard": "Dashboard",
-    "dashboardDesc": "System Overview",
+    "dashboardDesc": "Overview",
     "database": "Database",
     "databaseDesc": "Database Management",
     "translations": "Translations",
@@ -73,6 +74,5 @@
     "users": "User Management",
     "settings": "Settings"
   },
-  "loading": "Loading...",
-  "logout": "Logout"
+  "loading": "Loading..."
 }
