--- a/public/locales/ar/admin.json
+++ b/public/locales/ar/admin.json
@@ -1,7 +1,8 @@
+
 {
   "navigation": {
     "dashboard": "لوحة التحكم",
-    "dashboardDesc": "نظرة عامة على النظام",
+    "dashboardDesc": "النظرة العامة",
     "database": "قاعدة البيانات",
     "databaseDesc": "إدارة قاعدة البيانات",
     "translations": "الترجمات",
@@ -73,19 +74,5 @@
     "users": "إدارة المستخدمين",
     "settings": "الإعدادات"
   },
-  "loading": "جاري التحميل...",
-  "title": "لوحة تحكم المسؤول",
-  "logout": "تسجيل الخروج",
-  "navigation": {
-    "dashboard": "لوحة التحكم",
-    "dashboardDesc": "نظرة عامة على النظام",
-    "database": "قاعدة البيانات",
-    "databaseDesc": "إدارة قاعدة البيانات",
-    "translations": "الترجمات",
-    "translationsDesc": "إدارة الترجمات",
-    "users": "المستخدمين",
-    "usersDesc": "إدارة المستخدمين",
-    "settings": "الإعدادات",
-    "settingsDesc": "إعدادات النظام"
-  }
+  "loading": "جاري التحميل..."
 }
